@@ -14,6 +14,7 @@
 -- patched around shutdown issue after reload
 -- fixed calls to Inspector::tterm()
 -- snort2lua updates from josh
+-- suppress repeated 129:20 on same session
 
 127
 -- REG_TEST out logging tcp options for rebuilt packets to match snort bug
